# LPCNet_parallel

./: CMakeLists.txt  README.md  config.h  get_training_data.sh
audio/: audio_net.pcm  audio_rule.pcm  audio_shift.pcm  audio_smooth.pcm  audio_std.pcm  features.f32
include/: lpcnet.h
model/: separator.h5
src/: _kiss_fft_guts.h  arch.h  celt_lpc.c  celt_lpc.h  ceps_vq_train.c  common.c  common.h  compile.sh  dump_data.c  dump_lpcnet.py  frame_analysis.c  frame_analysis.h  freq.c  freq.h  kiss_fft.c  kiss_fft.h  loss.py  lpcnet.c  lpcnet.py  lpcnet_dec.c  lpcnet_demo.c  lpcnet_enc.c  lpcnet_private.h  mdense.py  nnet.c  nnet.h  nnet_data.h  opus_types.h  pitch.c  pitch.h  prepare_training_dataset.sh  test_lpcnet.c  test_lpcnet.py  test_vec.c  train_lpcnet.py  train_separator.py  ulaw.py  vec.h  vec_avx.h  vec_neon.h
